# Life_Simulation

./: .gitignore  0.index.js  Cargo.toml  README.md  index.html  index.js
js/: canvas.js  simulation.js
pkg/: life_simulation.d.ts  life_simulation.js  life_simulation_bg.wasm  life_simulation_bg.wasm.d.ts  package.json
src/: lib.rs
temp/: 0.index.js  index.js  style.css
tests/: main.rs
web/: canvas.js  game.js  index.html  index.js  package-lock.json  package.json  simulation.js  webpack.config.js
